# fitness

./: .gitignore  .talismanrc  pyproject.toml
fitness/: main.py
