[project]
name = "fitness"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier Matias-Cabrera",email = "javier@javiermatias.com"}
]
requires-python = "^3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "boto3 (>=1.40.21,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "fitness"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
